--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             line-height: 1.5;
         }
         
-        /* (変更) 手書き風フォント用のクラス */
+        /* 手書き風フォント用のクラス */
         .handwriting {
             font-family: 'Yomogi', cursive; /* フォントを Yomogi に変更 */
             font-size: 1rem;  
@@ -228,6 +228,20 @@
                             <div class="timeline-content">
                                 <h4>高山着</h4>
                                 <p class="handwriting">長旅おつかれ</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-time">12:00</div>
+                            <div class="timeline-content">
+                                <h4>昼飯</h4>
+                                <p class="handwriting">どうしよう</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-time">13:00</div>
+                            <div class="timeline-content">
+                                <h4>どうしよう</h4>
+                                <p class="handwriting">どうしよう</p>
                             </div>
                         </li>
                         <li>
@@ -410,8 +424,8 @@
                     <p>平湯温泉や福地温泉など、5つの温泉地の総称。大自然の中の露天風呂が魅力です。</p>
                 </div>
             </div>
-            
-            </section>
+
+        </section>
 
         <section id="checklist">
             <div class="card">
