--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             
             <div class="card">
                 <div class="card-content">
-                    <h3>DAY 1: 高山へ</h3>
+                    <h3>DAY 1</h3>
                     <ul class="timeline-list">
                         <li>
                             <div class="timeline-time">06:51</div>
@@ -284,7 +284,7 @@
 
             <div class="card">
                 <div class="card-content">
-                    <h3>DAY 2: G</h3>
+                    <h3>DAY 2</h3>
                     <ul class="timeline-list">
                         <li>
                             <div class="timeline-time">08:00</div>
