Change background image format from PNG to JPG

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             
             /* --- ここに背景画像を指定 --- */
             /* (例: AI生成した和紙のテクスチャや飛騨の山並みなど) */
-            background-image: url('img/hida-texture.png'); 
+            background-image: url('img/hida-texture.jpg'); 
             background-size: cover;
             background-position: center;
             
