Increase background opacity from 3% to 15%

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             background-position: center;
             
             /* --- ここで透過させる --- */
-            opacity: 0.03; /* 3% (かなりうっすら) */
+            opacity: 0.15; /* 15% (うっすら) */
             
             /* 画像がない場合や読み込めない場合も、ベースのグレーが適用される */
             background-color: var(--color-background-body); 
