--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&family=Noto+Sans+JP:wght@400;600&family=Yomogi&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&family=Noto+Sans+JP:wght@400;600&family=Yomogi&family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
     
     <script src="https://unpkg.com/feather-icons"></script> 
 
@@ -70,8 +70,7 @@
 
         /* ======== ヘッダー (すりガラス + グラデーション) ======== */
         header {
-            /* 【変更点】背景を「半透明のグラデーション」に変更 */
-            /* 上端(80%透過)から下端(70%透過)への微妙なグラデーション */
+            /* 背景を「半透明のグラデーション」に変更 */
             background: linear-gradient(
                 to bottom, 
                 rgba(230, 242, 242, 0.8), /* #E6F2F2 の 80% */
@@ -86,7 +85,7 @@
             border-bottom: 1px solid var(--color-border);
             box-shadow: 0 1px 1px rgba(9, 30, 66, 0.08);
 
-            /* 【変更点】すりガラス効果 (blur値は少し強めに) */
+            /* すりガラス効果 */
             -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px); 
         }
@@ -233,9 +232,9 @@
             line-height: 1.5;
         }
         
-        /* 手書き風フォント (Yomogi) (維持) */
+        /* 【変更点】手書き風フォント (はちまるポップ) */
         .handwriting {
-            font-family: 'Yomogi', cursive; 
+            font-family: 'Hachi Maru Pop', cursive; 
             font-size: 1rem;  
             color: #444; 
             line-height: 1.4; 
