Fix typo in card title for 新穂高ロープウェイ

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                 <div class="card">
                     <img src="img/image10.jpg" alt="新穂高ロープウェイ">
                     <div class="card-content">
-                        <h3>新穂高ローPウェイ</h3>
+                        <h3>新穂高ロープウェイ</h3>
                         <p>2階建てゴンドラが特徴。標高2,156mの山頂展望台から北アルプスの大パノラマを楽しめます。</p>
                     </div>
                 </div>
