--- a/index.html
+++ b/index.html
@@ -619,14 +619,21 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="timeline-time">19:08</div>
+                                <div class="timeline-time">19:10</div>
                                 <div class="timeline-content">
-                                    <h4>富山発</h4>
-                                    <p class="handwriting">富山で飯食って後ろの自由席にしてもいい</p>
+                                    <h4>糸庄</h4>
+                                    <p class="handwriting">氷見うどん！すぐ入れるかな</p>
                                 </div>
                             </li>
                             <li>
-                                <div class="timeline-time">21:20</div>
+                                <div class="timeline-time">21:23</div>
+                                <div class="timeline-content">
+                                    <h4>富山発</h4>
+                                    <p class="handwriting">20:09発で帰れたらいいよね</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="timeline-time">23:32</div>
                                 <div class="timeline-content">
                                     <h4>東京着</h4>
                                     <p class="handwriting">fin</p>
